style: fix mobile navbar top gap & enforce body margin

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ nav {
 body,
 html {
     top: 0px !important;
+    margin-top: 0px !important;
 }
 
 /* Style the Google translate widget to blend with dark mode */
